Port PR #46: Crowdin: New translations